SalesForce/src/objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&apos;CHE&apos;,&apos;Chennai&apos;</fullName>
                </value>
                <value>
                    <fullName>&apos;CBE&apos;,&apos;Coimbatore&apos;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rollup__c</fullName>
        <label>Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Roll__c</fullName>
        <label>Item Master</label>
        <referenceTo>Item_Master__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>TamilNadu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>